angular-catastro/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gestion-herencia
  namespace: default
  labels:
    app: gestion-herencia
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: gestion-herencia
